- implemented magnitude and normalize - implemented dot function and angle function - implemented cross product function and areaTriangle function

--- a/asgn0/asg0.html
+++ b/asgn0/asg0.html
@@ -11,13 +11,13 @@
     </canvas>
     <br><br>
     v1: 
-    x <input type="text" id="xCoord" value="2.25">
-    y <input type="text" id="yCoord" value="2.25">
+    x <input type="text" id="xCoord" value="0">
+    y <input type="text" id="yCoord" value="5">
 
     <br><br>
     v2:
-    x <input type="text" id="xCoord2">
-    y <input type="text" id="yCoord2">
+    x <input type="text" id="xCoord2" value="5">
+    y <input type="text" id="yCoord2" value="0">
 
     <br><br>
     <input type="button" value="Draw" onclick="handleDrawEvent()">
@@ -25,10 +25,14 @@
     <br><br>
     Operation: 
     <select id="opSelect">
-      <option value="add">add</option>
-      <option value="sub">subtract</option>
-      <option value="mul">multiply</option>
-      <option value="div">divide</option>
+      <option value="add">Add</option>
+      <option value="sub">Subtract</option>
+      <option value="mul">Multiply</option>
+      <option value="div">Divide</option>
+      <option value="angle">Angle Between</option>
+      <option value="area">Area</option>
+      <option value="mag">Magnitude</option>
+      <option value="norm">Normalize</option>
     </select>
 
     Scalar: <input type="text" id="scalar" value="2">
