--- a/asgn0/asg0.html
+++ b/asgn0/asg0.html
@@ -39,7 +39,7 @@
 
     <br><br>
     <input type="button" value="Draw" onclick="handleDrawOperationEvent()">
-    <script src="lib/cuon-matrix.js"></script>
+    <script src="lib/cuon-matrix-cse160.js"></script>
     <script src="asg0.js"></script>    
   </body>
 </html>
