Step 7 done - Added a clear canvas button

--- a/asgn1/ColoredPoints.html
+++ b/asgn1/ColoredPoints.html
@@ -10,6 +10,12 @@
     Please use a browser that supports "canvas"
     </canvas>
 
+    <div>
+    <button id="clearButton">Clear Canvas</button>
+    </div>
+
+    <br>
+    
     <div>Shape Color:</div>
     <div>  
       <label>R <input id="redSlide" type="range" min="0" max="100" value="100"></label>
