-Step 9 complete -Added triangles to the program

--- a/asgn1/ColoredPoints.html
+++ b/asgn1/ColoredPoints.html
@@ -15,7 +15,12 @@
     </div>
 
     <br>
-    
+    <div>Drawing Mode:</div>
+    <div>
+      <button id="squareButton">Square</button>
+      <button id="triangleButton">Triangle</button>
+    </div>
+
     <div>Shape Color:</div>
     <div>  
       <label>R <input id="redSlide" type="range" min="0" max="100" value="100"></label>
@@ -30,6 +35,7 @@
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
+    <script src="Triangle.js"></script>
     <script src="ColoredPoints.js"></script>
   </body>
 </html>
