--- a/asgn1/ColoredPoints.html
+++ b/asgn1/ColoredPoints.html
@@ -19,6 +19,7 @@
     <div>
       <button id="squareButton">Square</button>
       <button id="triangleButton">Triangle</button>
+      <button id="circleButton">Circle</button>
     </div>
 
     <div>Shape Color:</div>
@@ -36,6 +37,7 @@
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
     <script src="Triangle.js"></script>
+    <script src="Circle.js"></script>
     <script src="ColoredPoints.js"></script>
   </body>
 </html>
