--- a/asgn1/ColoredPoints.html
+++ b/asgn1/ColoredPoints.html
@@ -31,6 +31,7 @@
 
     <div>
       <label>Shape Size: <input id="sizeSlide" type="range" min="1" max="40" value="20"></label>
+      <label>(Circles) Segment Count: <input id="segSlide" type="range" min="3" max="60" value="20"></label>
     </div>
 
     <script src="lib/webgl-utils.js"></script>
