--- a/asgn1/ColoredPoints.html
+++ b/asgn1/ColoredPoints.html
@@ -9,9 +9,11 @@
     <canvas id="webgl" width="400" height="400">
     Please use a browser that supports "canvas"
     </canvas>
+    <img src="chicken.jpg" alt="Drawing Reference" width="320">
 
     <div>
     <button id="clearButton">Clear Canvas</button>
+    <button id="chickenButton">Draw Chicken</button>
     </div>
 
     <br>
