--- a/asgn1/src/ColoredPoints.html
+++ b/asgn1/src/ColoredPoints.html
@@ -1,3 +1,8 @@
+<!--
+  Mandy Lau
+  mlau16@ucsc.edu
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -43,9 +48,9 @@
       <label>(Circles) Segment Count: <input id="segSlide" type="range" min="3" max="60" value="20"></label>
     </div>
 
-    <script src="lib/webgl-utils.js"></script>
-    <script src="lib/webgl-debug.js"></script>
-    <script src="lib/cuon-utils.js"></script>
+    <script src="../lib/webgl-utils.js"></script>
+    <script src="../lib/webgl-debug.js"></script>
+    <script src="../lib/cuon-utils.js"></script>
     <script src="Target.js"></script>
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
