Added global rotate matrix - Added temporary shading

--- a/asgn2/src/BlockyAnimal.html
+++ b/asgn2/src/BlockyAnimal.html
@@ -46,6 +46,9 @@
       <label>(Circles) Segment Count: <input id="segSlide" type="range" min="3" max="60" value="20"></label>
     </div>
 
+    <br>
+    <label>Camera Angle: <input id="angleSlide" type="range" min="0" max="90" value="5"></label>
+
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
