--- a/asgn2/src/BlockyAnimal.html
+++ b/asgn2/src/BlockyAnimal.html
@@ -47,8 +47,11 @@
     </div>
 
     <br>
-    <label>Camera Angle: <input id="angleSlide" type="range" min="0" max="90" value="5"></label>
-
+    <label>Camera Angle: <input id="angleSlide" type="range" min="0" max="360" value="45"></label>
+    <br>
+    <label>Rotate: <input id="rotateSlide" type="range" min="-45" max="45" value="0"></label>
+    <br>
+    <label>Neck: <input id="neckSlide" type="range" min="-45" max="0" value="0"></label>
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
