--- a/asgn2/src/BlockyAnimal.html
+++ b/asgn2/src/BlockyAnimal.html
@@ -8,50 +8,62 @@
   <head>
     <meta charset="utf-8" />
     <title>Blocky Animal</title>
+
+    <style>
+      #canvas-container {
+        display: flex;
+        justify-content: center;
+      }
+    </style>
   </head>
 
   <body onload="main()">
-    <button id ="startGameButton">Start Target Practice</button>
-    <button id="stopGameButton">Stop Game</button>
+    <button id ="startGameButton">X</button>
+    <button id="stopGameButton">X</button>
 
-    <span style="margin-left:12px;">Score: <span id="scoreText">0</span></span>
-    <span style="margin-left:12px;">Time: <span id="timeText">30.0</span></span>
     <br>
+    <div style="text-align: center">BLOCKY ANIMAL: SHEEP</div>
+    <div id="canvas-container">
+      <canvas id="webgl" width="400" height="400">
+      Please use a browser that supports "canvas"
+      </canvas>
+    </div>
 
-    <canvas id="webgl" width="400" height="400">
-    Please use a browser that supports "canvas"
-    </canvas>
-    
+    <!---
     <div>
-    <button id="clearButton">Clear Canvas</button>
+    <button id="clearButton">X</button>
     </div>
 
     <br>
-    <div>Drawing Mode:</div>
     <div>
-      <button id="squareButton">Square</button>
-      <button id="triangleButton">Triangle</button>
-      <button id="circleButton">Circle</button>
+      <button id="squareButton">X</button>
+      <button id="triangleButton">X</button>
+      <button id="circleButton">X</button>
     </div>
 
-    <div>Shape Color:</div>
     <div>  
-      <label>R <input id="redSlide" type="range" min="0" max="100" value="100"></label>
-      <label>G <input id="greenSlide" type="range" min="0" max="100" value="100"></label>
-      <label>B <input id="blueSlide" type="range" min="0" max="100" value="100"></label>
+      <label>X <input id="redSlide" type="range" min="0" max="100" value="100"></label>
+      <label>X <input id="greenSlide" type="range" min="0" max="100" value="100"></label>
+      <label>X <input id="blueSlide" type="range" min="0" max="100" value="100"></label>
     </div>
 
     <div>
-      <label>Shape Size: <input id="sizeSlide" type="range" min="1" max="40" value="20"></label>
-      <label>(Circles) Segment Count: <input id="segSlide" type="range" min="3" max="60" value="20"></label>
+      <label>X <input id="sizeSlide" type="range" min="1" max="40" value="20"></label>
+      <label>X <input id="segSlide" type="range" min="3" max="60" value="20"></label>
     </div>
+    --->
 
     <br>
+    <div style="text-align: center">
     <label>Camera Angle: <input id="angleSlide" type="range" min="0" max="360" value="45"></label>
     <br>
     <label>Rotate: <input id="rotateSlide" type="range" min="-45" max="45" value="0"></label>
     <br>
-    <label>Neck: <input id="neckSlide" type="range" min="-45" max="0" value="0"></label>
+    Animation: 
+    <button type="button" id="animationOnButton">ON</button>
+    <button type="button" id="animationOffButton">OFF</button>
+    </div>
+
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
@@ -61,4 +73,5 @@
     <script src="Circle.js"></script>
     <script src="BlockyAnimal.js"></script>
   </body>
+
 </html>
