- Added Sphere and Torus shapes - Added a collar to the sheep

--- a/asgn2/src/BlockyAnimal.html
+++ b/asgn2/src/BlockyAnimal.html
@@ -24,7 +24,7 @@
     <br>
     <div style="text-align: center">BLOCKY ANIMAL: SHEEP</div>
     <div id="canvas-container">
-      <canvas id="webgl" width="400" height="400">
+      <canvas id="webgl" width="800" height="800">
       Please use a browser that supports "canvas"
       </canvas>
     </div>
@@ -69,6 +69,8 @@
     <script src="../lib/cuon-utils.js"></script>
     <script src="../lib/cuon-matrix-cse160.js"></script>
     <script src="Cube.js"></script>
+    <script src="Torus.js"></script>
+    <script src="Sphere.js"></script>
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
     <script src="BlockyAnimal.js"></script>
