- Added performance features to the page and modified some code for better performance

--- a/asgn2/src/BlockyAnimal.html
+++ b/asgn2/src/BlockyAnimal.html
@@ -29,6 +29,10 @@
       </canvas>
     </div>
 
+    <div id="perf" style="text-align:center; font-family: monospace; margin-top: 8px;">
+      FPS: -- | ms/frame: --
+    </div>    
+
     <!---
     <div>
     <button id="clearButton">X</button>
