--- a/asgn2/src/BlockyAnimal.html
+++ b/asgn2/src/BlockyAnimal.html
@@ -63,6 +63,10 @@
     <br>
     <label>Rotate: <input id="rotateSlide" type="range" min="-45" max="45" value="0"></label>
     <br>
+    <label>Neck: <input id="neckSlide" type="range" min="-45" max="45" value="0"></label>
+    <br>
+    <label>Head: <input id="headSlide" type="range" min="-20" max="20" value="0"></label>
+    <br>
     Animation: 
     <button type="button" id="animationOnButton">ON</button>
     <button type="button" id="animationOffButton">OFF</button>
