--- a/asgn3/src/World.html
+++ b/asgn3/src/World.html
@@ -83,6 +83,7 @@
     <script src="Sphere.js"></script>
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
+    <script src="Camera.js"></script>
     <script src="World.js"></script>
   </body>
 
