Added more lantern functions and a wood texture

--- a/asgn3/src/World.html
+++ b/asgn3/src/World.html
@@ -31,7 +31,23 @@
 
     <div id="perf" style="text-align:center; font-family: monospace; margin-top: 8px;">
       FPS: -- | ms/frame: --
-    </div>    
+    </div>   
+    
+    <div id="controls" style="
+      position: fixed;
+      top: 12px;
+      left: 12px;
+      max-width: 320px;
+      padding: 10px 12px;
+      background: rgba(0,0,0,0.55);
+      color:white;
+      font-family: monospace;
+      font-size: 12px;
+      line-height: 1.35;
+      border-radius: 10px;
+      z-index: 9999;
+      user-select: none;">
+    </div>
 
     <!---
     <div>
